ubuntu-release-upgrader (1:22.04.9) UNRELEASED; urgency=medium

  * do-release-upgrade: Preserve env vars needed for screen lock prevention (LP: #1968607).

 -- Nick Rosbrook <nick.rosbrook@canonical.com>  Tue, 12 Apr 2022 15:00:49 -0400

ubuntu-release-upgrader (1:22.04.8) jammy; urgency=medium

  [ Brian Murray ]
  * Update the firefox deb2snap entry so that it includes Ubuntu Studio.
  * Modify the ubuntu-release-upgrader apport package hook to also gather
    recent messages in journalctl and a list of crashes in /var/crash as one
    of those may have negatively affected the upgrade process.

  [ Christian Ehrhardt ]
  * d/91-release-upgrade: try to use the less expensive /etc/lsb-release
    to check if we are in a devel release (LP: #1893716)

 -- Brian Murray <brian@ubuntu.com>  Thu, 31 Mar 2022 14:23:13 -0700

ubuntu-release-upgrader (1:22.04.7) jammy; urgency=medium

  [ Brian Murray ]
  * Inclusive naming updates.

  [ Nick Rosbrook ]
  * Replace core18 with core20 in DistUpgrade/deb2snap.json.
  * Add firefox deb2snap entries for appropriate flavors. This includes
    Kubuntu, where an issue was already reported (LP: #1964443).

 -- Brian Murray <brian@ubuntu.com>  Mon, 14 Mar 2022 10:47:02 -0700

ubuntu-release-upgrader (1:22.04.6) jammy; urgency=medium

  * Prevent upgrades to jammy on POWER8 (LP: #19602550).

 -- Nick Rosbrook <nick.rosbrook@canonical.com>  Wed, 23 Feb 2022 12:37:39 -0800

ubuntu-release-upgrader (1:22.04.5) jammy; urgency=medium

  [ Brian Murray ]
  * debian/control: rename the main branch
  * Increase the fallback KERNEL_INITRD_SIZE so that there is room for
    commonly used modules in the initramfs subsequently some upgrades may be
    disallowed due to a lack of free space in /boot.
  * Run pre-build.sh: updating mirrors, demotions, and translations.

  [ Nick Rosbrook ]
  * Update download rates in estimated download message (LP: #1947581)
  * Use org.freedesktop.ScreenSaver to inhibit screen lock (LP: #1959458).